Resolve and de-duplicate theme paths

BUG: 482484
FIXED-IN: 6.3.0